# cpp-starter

./: .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml
projects/calculator/: CMakeLists.txt
projects/calculator/tests/: CMakeLists.txt
projects/greeter/: CMakeLists.txt
projects/greeter/include/: Greeter.hpp
projects/greeter/src/: Greeter.cpp
projects/greeter/tests/: CMakeLists.txt
projects/greeter/tests/src/: CalculatorTests.cpp
